--- a/src/components/vars.sass
+++ b/src/components/vars.sass
@@ -2,3 +2,8 @@ $primary: #0185ff
 $border: #787878
 $mobile-width: 800px
 $large: 32px
+
+@mixin fill-avaliable()
+    width: -moz-available
+    width: -webkit-fill-available
+    width: fill-available
